; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-test.c_iwl_test_rx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-test.c_iwl_test_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_test = type { i64 }
%struct.iwl_rx_cmd_buffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iwl_test_rx(%struct.iwl_test* %0, %struct.iwl_rx_cmd_buffer* %1) #0 {
  %3 = alloca %struct.iwl_test*, align 8
  %4 = alloca %struct.iwl_rx_cmd_buffer*, align 8
  store %struct.iwl_test* %0, %struct.iwl_test** %3, align 8
  store %struct.iwl_rx_cmd_buffer* %1, %struct.iwl_rx_cmd_buffer** %4, align 8
  %5 = load %struct.iwl_test*, %struct.iwl_test** %3, align 8
  %6 = getelementptr inbounds %struct.iwl_test, %struct.iwl_test* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.iwl_test*, %struct.iwl_test** %3, align 8
  %11 = load %struct.iwl_rx_cmd_buffer*, %struct.iwl_rx_cmd_buffer** %4, align 8
  %12 = call i32 @iwl_test_send_rx(%struct.iwl_test* %10, %struct.iwl_rx_cmd_buffer* %11)
  br label %13

13:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @iwl_test_send_rx(%struct.iwl_test*, %struct.iwl_rx_cmd_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
